--- a/ccs/styles.css
+++ b/ccs/styles.css
@@ -6,6 +6,11 @@
     Цвет Лого          #000000
 
 */
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
+}
 
 :root {
     --primary-bg-color: #ffffff;
@@ -22,10 +27,40 @@
     --accent-color: #2196f3;
 }
 /*-------------MAIN-------------*/
+.conteiner {
+    margin-left: auto;
+    margin-right: auto;
+    width: 1200px;
+    padding-left: 15px;
+    padding-right: 15px;
+    outline: 2px solid red;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+    margin: 0;
+}
+
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    padding: 0;
+    overflow: hidden;
+    border: 0;
+    clip: rect(0 0 0 0);
+}
 .link {
     text-decoration: none;
 }
 .list {
+    padding: 0px;
+    margin: 0px;
     list-style-type: none;
 }
 .pages {
@@ -54,13 +89,37 @@
 }
 
 /*----------Site naw----------*/
+.main-nav {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.nav-content {
+    display: flex;
+    align-items: center;
+}
+
+.naw-list {
+    display: flex;
+    margin-left: 93px;
+}
+
+.naw-item:not(:last-child) {
+    margin-right: 50px;
+}
+
 .naw-link {
+    display: block;
+    padding-top: 32px;
+    padding-bottom: 32px;
     font-style: normal;
     font-weight: 500;
     font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.02em;
     color: var(--title-text-color);
+    /* background-color: teal; */
 }
 
 .naw-link:hover,
@@ -71,7 +130,17 @@
     color: var(--accent-color);
 }
 
+.info-list {
+    display: flex;
+}
+.info-item:not(:last-child) {
+    margin-right: 50px;
+}
+
 .info-link {
+    /* background-color: tomato; */
+    padding-top: 32px;
+    padding-bottom: 32px;
     font-style: normal;
     font-weight: 500;
     font-size: 14px;
@@ -83,6 +152,13 @@
 .info-link:hover,
 .info-link:focus {
     color: var(--accent-color);
+}
+
+.address {
+    margin-top: 20px;
+}
+.address-item:not(:last-child) {
+    margin-bottom: 9px;
 }
 .address-link {
     font-style: normal;
@@ -100,9 +176,18 @@
 
 /* --------------------HERO-------------------- */
 .hero {
+    padding-top: 47px;
+    padding-bottom: 47px;
+}
+
+.hero-content {
     background-color: var(--primary-text-color);
+    text-align: center;
+    padding-top: 200px;
+    padding-bottom: 200px;
 }
 .hero-title {
+    padding-bottom: 20px;
     font-weight: 900;
     font-size: 44px;
     line-height: 1.36;
@@ -113,6 +198,11 @@
     font-size: 44px;
 }
 .hero-button {
+    padding-bottom: 20px;
+    display: inline-block;
+    border-radius: 4px;
+    padding: 10px 32px;
+    font-family: Roboto;
     font-weight: 700;
     font-size: 16px;
     line-height: 1.87;
@@ -123,7 +213,23 @@
 }
 
 /* --------------------ADVANTAGE-------------------- */
+.advantage {
+    padding-bottom: 47px;
+}
+
+.advantage-list {
+    display: flex;
+    margin-left: -15px;
+    margin-right: -15px;
+}
+.advantage-item {
+    margin-left: 15px;
+    margin-right: 15px;
+    flex-basis: calc((100% - 90px) / 3);
+}
+
 .advantage-title {
+    margin-bottom: 10px;
     font-weight: 700;
     font-size: 14px;
     line-height: 1.4;
@@ -138,21 +244,35 @@
     letter-spacing: 0.03em;
     color: var(--primary-text-color);
 }
-
+.about {
+    padding-bottom: 94px;
+    padding-top: 47px;
+}
 .about-title {
+    margin-bottom: 50px;
     font-weight: 700;
     font-size: 36px;
     line-height: 1.16;
     text-align: center;
     letter-spacing: 0.03em;
     color: var(--title-text-color);
+}
+
+.about-list {
+    display: flex;
+}
+.about-item:not(:last-child) {
+    margin-right: 30px;
 }
 
 /* --------------------TEAM-------------------- */
 .team {
+    padding-top: 94px;
+    padding-bottom: 94px;
     background-color: var(--secondary-bg-color);
 }
 .team-title {
+    margin-bottom: 50px;
     font-weight: 700;
     font-size: 36px;
     line-height: 1.16;
@@ -161,7 +281,23 @@
     color: var(--title-text-color);
 }
 
+.team-list {
+    display: flex;
+}
+
+.team-item {
+    text-align: center;
+    border-bottom-right-radius: 4px;
+    border-bottom-left-radius: 4px;
+    background-color: var(--primary-bg-color);
+}
+.team-item:not(:last-child) {
+    margin-right: 30px;
+}
+
 .team-name {
+    margin-top: 30px;
+    margin-bottom: 10px;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.19;
@@ -169,6 +305,7 @@
     color: var(--title-text-color);
 }
 .team-post {
+    margin-bottom: 30px;
     font-weight: 400;
     font-size: 16px;
     line-height: 1.19;
@@ -177,13 +314,27 @@
 }
 /* --------------------FOOTER-------------------- */
 .footer {
+    padding-top: 54px;
+    padding-bottom: 66px;
     background-color: var(--footer-bg-color);
 }
 
 /* --------------------portfolio.html-------------------- */
 
 /* --------------------FILTER-------------------- */
+.main-project {
+    padding-top: 94px;
+    padding-bottom: 94px;
+}
+.filter {
+    text-align: center;
+    padding-bottom: 50px;
+}
 .filter-button {
+    display: inline-block;
+    border: 0px;
+    border-radius: 4px;
+    padding: 6px 22px;
     font-family: Roboto;
     font-weight: 500;
     font-size: 16px;
@@ -197,9 +348,28 @@
     background-color: var(--accent-color);
     color: var(--secondary-text-color);
 }
+.filter-button:not(:last-child) {
+    margin-right: 8px;
+}
 
 /* --------------------PROJECTS-------------------- */
+
+.project-list {
+    display: flex;
+    flex-wrap: wrap;
+    margin: -15px;
+}
+.project-item {
+    outline: 1px solid #eeeeee;
+    margin: 15px;
+    flex-basis: calc((100% - 90px) / 3);
+}
+
 .project-name {
+    padding-left: 24px;
+    padding-right: 24px;
+    padding-top: 20px;
+    padding-bottom: 4px;
     font-weight: 700;
     font-size: 18px;
     line-height: 2;
@@ -207,6 +377,9 @@
     color: var(--title-text-color);
 }
 .project-type {
+    padding-left: 24px;
+    padding-right: 24px;
+    padding-bottom: 20px;
     font-weight: 400;
     font-size: 16px;
     line-height: 1.87;
