--- a/ccs/styles.css
+++ b/ccs/styles.css
@@ -33,7 +33,7 @@
     width: 1200px;
     padding-left: 15px;
     padding-right: 15px;
-    outline: 2px solid red;
+    /* outline: 2px solid red; */
 }
 h1,
 h2,
@@ -119,7 +119,6 @@ p {
     line-height: 1.14;
     letter-spacing: 0.02em;
     color: var(--title-text-color);
-    /* background-color: teal; */
 }
 
 .naw-link:hover,
