--- a/ccs/styles.css
+++ b/ccs/styles.css
@@ -89,11 +89,14 @@ p {
 }
 
 /*----------Site naw----------*/
+.page-header {
+    border-bottom: 1px solid #ececec;
+}
+
 .main-nav {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    border-bottom: 1px solid #ececec;
 }
 
 .nav-content {
@@ -175,13 +178,14 @@ p {
 /* index.html */
 
 /* --------------------HERO-------------------- */
-.main-hero {
-    padding-top: 47px;
-    padding-bottom: 47px;
+.hero.section {
+    max-width: 1600px;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: var(--primary-text-color);
 }
 
 .hero-content {
-    background-color: var(--primary-text-color);
     text-align: center;
     padding-top: 200px;
     padding-bottom: 200px;
@@ -214,6 +218,7 @@ p {
 
 /* --------------------ADVANTAGE-------------------- */
 .advantage-list {
+    padding-top: 94px;
     display: flex;
     margin-left: -15px;
     margin-right: -15px;
@@ -262,9 +267,12 @@ p {
 }
 
 /* --------------------TEAM-------------------- */
-.main-team {
+.main-team .conteiner {
     padding-top: 94px;
     padding-bottom: 94px;
+}
+
+.team {
     background-color: var(--secondary-bg-color);
 }
 .team-title {
@@ -310,9 +318,11 @@ p {
 }
 /* --------------------FOOTER-------------------- */
 .footer {
+    background-color: var(--footer-bg-color);
+}
+.footer .conteiner {
     padding-top: 60px;
     padding-bottom: 60px;
-    background-color: var(--footer-bg-color);
 }
 
 /* --------------------portfolio.html-------------------- */
