Добавил отступы в блок команды

--- a/ccs/styles.css
+++ b/ccs/styles.css
@@ -267,7 +267,7 @@ p {
 }
 
 /* --------------------TEAM-------------------- */
-.main-team .conteiner {
+.team .conteiner {
     padding-top: 94px;
     padding-bottom: 94px;
 }
