--- a/ccs/styles.css
+++ b/ccs/styles.css
@@ -213,7 +213,12 @@ p {
     letter-spacing: 0.06em;
     color: var(--secondary-text-color);
     background-color: var(--accent-color);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     font-size: 16px;
+}
+.hero-button:hover,
+.hero-button:focus {
+    background-color: #188ce8;
 }
 
 /* --------------------ADVANTAGE-------------------- */
