--- a/ccs/styles.css
+++ b/ccs/styles.css
@@ -219,6 +219,7 @@ p {
 .hero-button:hover,
 .hero-button:focus {
     background-color: #188ce8;
+    cursor: pointer;
 }
 
 /* --------------------ADVANTAGE-------------------- */
